--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# our stuff
+config/token.txt
+config/data.db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,4 +209,3 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
-config/token.txt
